# fake-profile

./: .gitignore  README.md  quickstart.py  setup.sh  start-all.sh
backend/: Dockerfile  build.sh  config.py  pyproject.toml  render.yaml  requirements.txt  requirements_minimal.txt  start_text_api.sh  test_api.py  test_ml.py  test_multimodal_integration.py  test_simple.py  test_text_analysis.py
backend/api/: ensemble_api.py  ensemble_tabular_api.py  hybrid_tabular_api.py  main.py  production_tabular_api.py  profile_extraction_api.py  profile_extraction_simple.py  simple_tabular_api.py  tabular_classification_api.py  text_analysis_api.py  text_analysis_simple.py  vision_detection_api.py  vision_detection_simple.py
backend/ml/: advanced_tabular_classifier.py  auto_profile_extractor.py  image_preprocessing.py  optimize.py  simple_tabular_classifier.py  tabular_profile_classifier.py  text_analysis.py  train.py  train_metrics_model.py  vision_detection.py
frontend/: .env.production  enhanced-results-demo.html  next.config.js  package-lock.json  package.json  tailwind.config.js  test-api.js  tsconfig.tsbuildinfo  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: analysis-result-cards.tsx  enhanced-results-page.tsx  profile-analysis-dashboard.tsx  profile-input-form-old.tsx  profile-input-form.tsx  result-exporter.tsx  theme-provider.tsx  trust-factors-chart.tsx  trust-score.tsx  url-extract-form.tsx
frontend/components/ui/: badge.tsx
frontend/lib/: gemini.ts  metricsModel.json  metricsModel.test.ts  metricsModel.ts
(+5 files in other folders)
